--- a/Operating Systems/Lab/.vscode/settings.json
+++ b/Operating Systems/Lab/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "iostream": "cpp",
         "string": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "ostream": "cpp",
+        "filesystem": "cpp"
     }
 }
