--- a/Operating Systems/Lab/.vscode/settings.json
+++ b/Operating Systems/Lab/.vscode/settings.json
@@ -8,6 +8,7 @@
         "istream": "cpp",
         "__locale": "cpp",
         "__string": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "__tuple": "cpp"
     }
 }
