--- a/Operating Systems/Lab/.vscode/settings.json
+++ b/Operating Systems/Lab/.vscode/settings.json
@@ -11,6 +11,7 @@
         "string_view": "cpp",
         "__tuple": "cpp",
         "__threading_support": "c",
-        "thread": "c"
+        "thread": "c",
+        "condition_variable": "cpp"
     }
 }
